--- a/Labs/Labs.csproj
+++ b/Labs/Labs.csproj
@@ -8,4 +8,8 @@
         <RootNamespace>Lab_1</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Lab3" />
+    </ItemGroup>
+
 </Project>
